HFP-3267 Fix extra clue not showing high content completely

--- a/src/styles/h5p-crossword.scss
+++ b/src/styles/h5p-crossword.scss
@@ -559,7 +559,6 @@
     flex-direction: column;
     flex-wrap: wrap;
     height: 100%;
-    justify-content: center;
     overflow: hidden;
     overflow-y: auto;
     padding: 1em;
